# mc-honeypot

./: .gitignore  Cargo.toml  readme.md
src/: main.rs  packets.rs  protocol.rs  util.rs
src/formats/: csv.rs  json.rs  mod.rs  sqlite.rs
