[package]
name = "mc-honeypot"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.23", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
uuid = { version = "1.16" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
