[package]
name = "mc-honeypot"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.23"
clap = { version = "4.5", default-features = false, features = [
    "std",
    "derive",
] }
env_logger = { version = "0.11", default-features = false }
log = "0.4"
uuid = { version = "1.16", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.35", features = ["bundled"] }
